--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
             border-radius: 8px;
             max-width: 100%;
             max-height: 55vh;
-            touch-action: pan-y
+            touch-action: pan-y;
+            will-change: transform;
+            image-rendering: auto
         }
 
         #qrDraw {
@@ -330,6 +332,7 @@
             var W = 300, H = 300, path = [], playerId = 0, myColor = '#6a4c93', monsters = {}, packs = [], powerups = [], hazards = [], particles = [], ws, isReady = false, bounds = [0, 0, 900, 640];
             var blastCooldown = 0, abilityCooldown = 0, blastFx = [], floatTexts = [], isDead = false, hasSavedShape = false, savedPath = [];
             var lightningWarning = null, lightningStrike = null, suddenDeath = false, myAbility = 'none', isScotty = false;
+            var arenaDirty = false, cachedBgGrad = null, cachedAreaGrad = null, lastBounds = null;
             var WS_URL = (location.protocol === 'https:' ? 'wss:' : 'ws:') + '//' + (location.host || 'localhost:3000');
             var retries = 0;
             function post(m) { msg.textContent = m; msg.style.color = '#888' }
@@ -350,6 +353,7 @@
                         if (d.b) bounds = d.b;
                         if (d.bl) for (var bi = 0; bi < d.bl.length; bi++) blastFx.push({ x: d.bl[bi].x, y: d.bl[bi].y, age: 0 });
                         if (d.ft) for (var fi = 0; fi < d.ft.length; fi++) floatTexts.push({ x: d.ft[fi].x, y: d.ft[fi].y, text: d.ft[fi].text, color: d.ft[fi].color, age: 0 });
+                        arenaDirty = true;
                         lightningWarning = d.lw; lightningStrike = d.ls; suddenDeath = d.sd;
                         lobby.style.display = 'none'; ui.style.display = 'none'; arena.style.display = 'flex';
                         if (d.log) for (var i = 0; i < d.log.length; i++) addLog(d.log[i]);
@@ -453,51 +457,66 @@
             var abilityDescs = { dash: 'Speed burst forward', block: 'Invincible 4s', absorb: 'Reflect & heal 2s', none: '' };
             var abilityIcons = { dash: '⚡', block: '🛡', absorb: '💚', none: '' };
             var puLabels = { speed: '2x SPEED', shield: 'SHIELD', damage: '2x DMG', ghost: 'PHASE' };
-            function renderArena() {
-                var ctx = ac.getContext('2d');
-                // Arena background with subtle gradient
-                var bgGrad = ctx.createRadialGradient(450, 320, 50, 450, 320, 500);
-                bgGrad.addColorStop(0, '#1a1020'); bgGrad.addColorStop(1, '#080810');
-                ctx.fillStyle = bgGrad; ctx.fillRect(0, 0, 900, 640);
-                // Playable area
+            var arenaCtx = ac.getContext('2d');
+            function rebuildGradients() {
+                cachedBgGrad = arenaCtx.createRadialGradient(450, 320, 50, 450, 320, 500);
+                cachedBgGrad.addColorStop(0, '#1a1020'); cachedBgGrad.addColorStop(1, '#080810');
                 var bw = bounds[2] - bounds[0], bh = bounds[3] - bounds[1];
-                var aGrad = ctx.createRadialGradient(bounds[0] + bw / 2, bounds[1] + bh / 2, 30, bounds[0] + bw / 2, bounds[1] + bh / 2, Math.max(bw, bh) * 0.7);
-                aGrad.addColorStop(0, '#12121e'); aGrad.addColorStop(1, '#0a0a14');
-                ctx.fillStyle = aGrad; ctx.fillRect(bounds[0], bounds[1], bw, bh);
+                cachedAreaGrad = arenaCtx.createRadialGradient(bounds[0] + bw / 2, bounds[1] + bh / 2, 30, bounds[0] + bw / 2, bounds[1] + bh / 2, Math.max(bw, bh) * 0.7);
+                cachedAreaGrad.addColorStop(0, '#12121e'); cachedAreaGrad.addColorStop(1, '#0a0a14');
+                lastBounds = bounds.slice();
+            }
+            function drawFire(ctx, x, y) {
+                ctx.fillStyle = 'rgba(255,100,0,0.4)'; ctx.beginPath(); ctx.arc(x, y, 50, 0, Math.PI * 2); ctx.fill();
+                // Simple flame shape instead of emoji
+                ctx.fillStyle = '#f80'; ctx.beginPath(); ctx.moveTo(x, y - 10); ctx.lineTo(x - 6, y + 6); ctx.lineTo(x + 6, y + 6); ctx.closePath(); ctx.fill();
+                ctx.fillStyle = '#fc0'; ctx.beginPath(); ctx.moveTo(x, y - 5); ctx.lineTo(x - 3, y + 4); ctx.lineTo(x + 3, y + 4); ctx.closePath(); ctx.fill();
+                ctx.fillStyle = 'rgba(255,140,0,0.7)'; ctx.font = 'bold 8px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('BURNS', x, y + 14);
+            }
+            function drawVortex(ctx, x, y) {
+                ctx.strokeStyle = 'rgba(128,0,255,0.6)'; ctx.lineWidth = 3;
+                for (var vi = 0; vi < 3; vi++) { ctx.beginPath(); ctx.arc(x, y, 30 + vi * 25, 0, Math.PI * 2); ctx.stroke(); }
+                // Simple spiral indicator instead of emoji
+                ctx.fillStyle = '#808'; ctx.beginPath(); ctx.arc(x, y, 6, 0, Math.PI * 2); ctx.fill();
+                ctx.fillStyle = 'rgba(180,0,255,0.7)'; ctx.font = 'bold 8px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('PULLS', x, y + 14);
+            }
+            function renderArena() {
+                var ctx = arenaCtx;
+                // Rebuild gradients only when bounds change
+                if (!lastBounds || lastBounds[0] !== bounds[0] || lastBounds[1] !== bounds[1] || lastBounds[2] !== bounds[2] || lastBounds[3] !== bounds[3]) rebuildGradients();
+                ctx.fillStyle = cachedBgGrad; ctx.fillRect(0, 0, 900, 640);
+                var bw = bounds[2] - bounds[0], bh = bounds[3] - bounds[1];
+                ctx.fillStyle = cachedAreaGrad; ctx.fillRect(bounds[0], bounds[1], bw, bh);
                 var isShrunk = bounds[0] > 0 || bounds[1] > 0 || bounds[2] < 900 || bounds[3] < 640;
                 ctx.strokeStyle = isShrunk ? '#ff0000' : 'rgba(100,80,140,0.4)'; ctx.lineWidth = isShrunk ? 3 : 1; ctx.strokeRect(bounds[0], bounds[1], bw, bh);
 
                 // Draw hazards
                 for (var hi = 0; hi < hazards.length; hi++) {
                     var hz = hazards[hi];
-                    if (hz.type === 'fire') {
-                        ctx.fillStyle = 'rgba(255,100,0,0.4)'; ctx.beginPath(); ctx.arc(hz.x, hz.y, 50, 0, Math.PI * 2); ctx.fill();
-                        ctx.fillStyle = '#f80'; ctx.font = '16px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('🔥', hz.x, hz.y);
-                        ctx.fillStyle = 'rgba(255,140,0,0.7)'; ctx.font = 'bold 8px sans-serif'; ctx.fillText('BURNS', hz.x, hz.y + 14);
-                    } else if (hz.type === 'vortex') {
-                        ctx.strokeStyle = 'rgba(128,0,255,0.6)'; ctx.lineWidth = 3;
-                        for (var vi = 0; vi < 3; vi++) { ctx.beginPath(); ctx.arc(hz.x, hz.y, 30 + vi * 25, 0, Math.PI * 2); ctx.stroke(); }
-                        ctx.fillStyle = '#808'; ctx.font = '14px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('🌀', hz.x, hz.y);
-                        ctx.fillStyle = 'rgba(180,0,255,0.7)'; ctx.font = 'bold 8px sans-serif'; ctx.fillText('PULLS', hz.x, hz.y + 14);
-                    }
+                    if (hz.type === 'fire') { drawFire(ctx, hz.x, hz.y); }
+                    else if (hz.type === 'vortex') { drawVortex(ctx, hz.x, hz.y); }
                 }
                 // Lightning warning/strike
                 if (lightningWarning) {
                     ctx.strokeStyle = 'rgba(255,255,0,0.7)'; ctx.lineWidth = 2; ctx.setLineDash([5, 5]);
                     ctx.beginPath(); ctx.arc(lightningWarning.x, lightningWarning.y, 60, 0, Math.PI * 2); ctx.stroke();
                     ctx.setLineDash([]);
-                    // Pulsing warning circle
-                    var pulse = 0.3 + 0.3 * Math.sin(Date.now() / 100);
+                    // Pulsing warning circle (use bitwise for fast oscillation)
+                    var pulse = 0.3 + 0.3 * Math.sin(Date.now() * 0.01);
                     ctx.fillStyle = 'rgba(255,255,0,' + pulse + ')'; ctx.beginPath(); ctx.arc(lightningWarning.x, lightningWarning.y, 60, 0, Math.PI * 2); ctx.fill();
-                    ctx.fillStyle = '#ff0'; ctx.font = '24px sans-serif'; ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
-                    ctx.fillText('⚡', lightningWarning.x, lightningWarning.y);
-                    ctx.fillStyle = '#ff0'; ctx.font = 'bold 10px sans-serif'; ctx.fillText('WARNING', lightningWarning.x, lightningWarning.y + 25);
+                    // Lightning bolt shape instead of emoji
+                    ctx.fillStyle = '#ff0'; ctx.beginPath();
+                    var lx = lightningWarning.x, ly = lightningWarning.y;
+                    ctx.moveTo(lx - 4, ly - 12); ctx.lineTo(lx + 4, ly - 12); ctx.lineTo(lx + 1, ly - 2); ctx.lineTo(lx + 6, ly - 2);
+                    ctx.lineTo(lx - 2, ly + 12); ctx.lineTo(lx + 1, ly + 2); ctx.lineTo(lx - 6, ly + 2); ctx.closePath(); ctx.fill();
+                    ctx.fillStyle = '#ff0'; ctx.font = 'bold 10px sans-serif'; ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
+                    ctx.fillText('WARNING', lightningWarning.x, lightningWarning.y + 25);
                 }
                 if (lightningStrike) {
                     // Bright flash
                     ctx.fillStyle = 'rgba(255,255,200,0.6)'; ctx.beginPath(); ctx.arc(lightningStrike.x, lightningStrike.y, 70, 0, Math.PI * 2); ctx.fill();
-                    // Lightning bolt from top of arena to strike point
-                    ctx.save(); ctx.strokeStyle = '#fff'; ctx.lineWidth = 4; ctx.shadowColor = '#ff0'; ctx.shadowBlur = 20;
+                    // Lightning bolt from top - NO shadowBlur (very expensive)
+                    ctx.save(); ctx.strokeStyle = '#fff'; ctx.lineWidth = 4;
                     ctx.beginPath();
                     var bx = lightningStrike.x, by = lightningStrike.y;
                     var topY = bounds[1];
@@ -510,6 +529,9 @@
                         ctx.lineTo(lx, ly);
                     }
                     ctx.stroke();
+                    // Glow via thicker translucent stroke instead of shadowBlur
+                    ctx.lineWidth = 8; ctx.strokeStyle = 'rgba(255,255,0,0.3)';
+                    ctx.stroke();
                     // Second thinner bolt
                     ctx.lineWidth = 2; ctx.strokeStyle = 'rgba(255,255,100,0.8)';
                     ctx.beginPath(); ctx.moveTo(bx + (Math.random() - 0.5) * 15, topY);
@@ -521,7 +543,7 @@
                     // Impact glow
                     ctx.fillStyle = 'rgba(255,255,0,0.4)'; ctx.beginPath(); ctx.arc(bx, by, 50, 0, Math.PI * 2); ctx.fill();
                     ctx.fillStyle = '#fff'; ctx.font = 'bold 14px sans-serif'; ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
-                    ctx.fillText('⚡ ZAP!', bx, by);
+                    ctx.fillText('ZAP!', bx, by);
                 }
 
                 // Health packs
@@ -532,21 +554,24 @@
                     ctx.fillRect(pk.x - 6, pk.y - 2, 12, 4); ctx.fillRect(pk.x - 2, pk.y - 6, 4, 12);
                     ctx.fillStyle = '#155d32'; ctx.font = 'bold 9px sans-serif'; ctx.fillText(pk.hp, pk.x, pk.y + 16);
                 }
-                // Power-ups
+                // Power-ups (use simple shapes instead of emoji)
                 var puColors = { speed: '#ff0', shield: '#08f', damage: '#f00', ghost: '#aaa' };
-                var puSymbols = { speed: '⚡', shield: '🛡', damage: '💥', ghost: '👻' };
                 for (var pi = 0; pi < powerups.length; pi++) {
-                    var pu = powerups[pi];
+                    var pu = powerups[pi], puc = puColors[pu.type] || '#fff';
                     // Outer glow
-                    ctx.save(); ctx.globalAlpha = 0.25;
-                    ctx.fillStyle = puColors[pu.type] || '#fff'; ctx.beginPath(); ctx.arc(pu.x, pu.y, 20, 0, Math.PI * 2); ctx.fill();
-                    ctx.restore();
+                    ctx.globalAlpha = 0.25;
+                    ctx.fillStyle = puc; ctx.beginPath(); ctx.arc(pu.x, pu.y, 20, 0, Math.PI * 2); ctx.fill();
+                    ctx.globalAlpha = 1;
                     // Circle
-                    ctx.fillStyle = puColors[pu.type] || '#fff'; ctx.beginPath(); ctx.arc(pu.x, pu.y, 12, 0, Math.PI * 2); ctx.fill();
-                    ctx.fillStyle = '#000'; ctx.font = '14px sans-serif'; ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
-                    ctx.fillText(puSymbols[pu.type] || '?', pu.x, pu.y);
-                    // Label underneath
-                    ctx.fillStyle = puColors[pu.type] || '#fff'; ctx.font = 'bold 8px sans-serif';
+                    ctx.fillStyle = puc; ctx.beginPath(); ctx.arc(pu.x, pu.y, 12, 0, Math.PI * 2); ctx.fill();
+                    // Simple icon shapes
+                    ctx.fillStyle = '#000'; ctx.strokeStyle = '#000'; ctx.lineWidth = 2;
+                    if (pu.type === 'speed') { ctx.beginPath(); ctx.moveTo(pu.x - 4, pu.y - 6); ctx.lineTo(pu.x + 4, pu.y - 6); ctx.lineTo(pu.x + 1, pu.y); ctx.lineTo(pu.x + 5, pu.y); ctx.lineTo(pu.x - 2, pu.y + 7); ctx.lineTo(pu.x, pu.y + 1); ctx.lineTo(pu.x - 5, pu.y + 1); ctx.closePath(); ctx.fill(); }
+                    else if (pu.type === 'shield') { ctx.beginPath(); ctx.moveTo(pu.x, pu.y - 7); ctx.lineTo(pu.x + 7, pu.y - 3); ctx.lineTo(pu.x + 5, pu.y + 5); ctx.lineTo(pu.x, pu.y + 8); ctx.lineTo(pu.x - 5, pu.y + 5); ctx.lineTo(pu.x - 7, pu.y - 3); ctx.closePath(); ctx.fill(); }
+                    else if (pu.type === 'damage') { ctx.beginPath(); ctx.arc(pu.x, pu.y, 4, 0, Math.PI * 2); ctx.fill(); for (var ri = 0; ri < 6; ri++) { var ra = ri * Math.PI / 3; ctx.beginPath(); ctx.moveTo(pu.x + Math.cos(ra) * 5, pu.y + Math.sin(ra) * 5); ctx.lineTo(pu.x + Math.cos(ra) * 9, pu.y + Math.sin(ra) * 9); ctx.stroke(); } }
+                    else { ctx.globalAlpha = 0.6; ctx.beginPath(); ctx.arc(pu.x, pu.y, 6, 0, Math.PI * 2); ctx.fill(); ctx.globalAlpha = 1; }
+                    // Label
+                    ctx.fillStyle = puc; ctx.font = 'bold 8px sans-serif'; ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
                     ctx.fillText(puLabels[pu.type] || '', pu.x, pu.y + 20);
                 }
                 // Monsters
@@ -555,12 +580,12 @@
                     if (!m.path || !m.path.length) continue;
                     var sc = m.size / 40;
                     var pcx = 0, pcy = 0; for (var i = 0; i < m.path.length; i++) { pcx += m.path[i][0] * 12; pcy += m.path[i][1] * 12 } pcx /= m.path.length; pcy /= m.path.length;
-                    // Trail effect
+                    // Trail effect (render every other point for perf)
                     if (m.trail && m.trail.length > 1) {
-                        for (var ti = 0; ti < m.trail.length - 1; ti++) {
+                        ctx.fillStyle = m.color;
+                        for (var ti = 0; ti < m.trail.length - 1; ti += 2) {
                             var alpha = (ti / m.trail.length) * 0.4;
                             ctx.globalAlpha = alpha;
-                            ctx.fillStyle = m.color;
                             ctx.beginPath(); ctx.arc(m.trail[ti].x, m.trail[ti].y, m.size * 0.3 * (ti / m.trail.length), 0, Math.PI * 2); ctx.fill();
                         }
                         ctx.globalAlpha = 1;
@@ -575,17 +600,17 @@
                             if (er > maxR) maxR = er;
                         }
                         var glowR = maxR + 8;
-                        ctx.save(); ctx.globalAlpha = 0.35;
+                        ctx.globalAlpha = 0.35;
                         ctx.fillStyle = m.effects.shield ? '#08f' : m.effects.speed ? '#ff0' : m.effects.damage ? '#f00' : '#aaa';
                         ctx.beginPath(); ctx.arc(m.x, m.y, glowR, 0, Math.PI * 2); ctx.fill();
-                        ctx.restore();
-                        // Small effect label below monster
-                        var eLbl = m.effects.shield ? '🛡 SHIELD' : m.effects.speed ? '⚡ FAST' : m.effects.damage ? '💥 2xDMG' : '👻 PHASE';
+                        ctx.globalAlpha = 1;
+                        // Small effect label below monster (text only, no emoji)
+                        var eLbl = m.effects.shield ? 'SHIELD' : m.effects.speed ? 'FAST' : m.effects.damage ? '2xDMG' : 'PHASE';
                         var eClr = m.effects.shield ? '#4af' : m.effects.speed ? '#ff0' : m.effects.damage ? '#f66' : '#ccc';
-                        ctx.save(); ctx.globalAlpha = 0.9;
+                        ctx.globalAlpha = 0.9;
                         ctx.fillStyle = eClr; ctx.font = 'bold 8px sans-serif'; ctx.textAlign = 'center';
                         ctx.fillText(eLbl, m.x, m.y + maxR + 14);
-                        ctx.restore();
+                        ctx.globalAlpha = 1;
                     }
                     ctx.save(); ctx.translate(m.x, m.y); ctx.scale(sc, sc);
                     ctx.fillStyle = m.effects && m.effects.ghost ? 'rgba(255,255,255,0.3)' : m.color; ctx.beginPath();
@@ -740,7 +765,18 @@
                 var cd = setInterval(function () { abilityCooldown--; updateButtons(); if (abilityCooldown <= 0) { clearInterval(cd); if (!isDead) { abilityBtn.disabled = false; abilityBtn.style.background = '' } } }, 1000);
                 updateButtons();
             };
-            setInterval(function () { if (arena.style.display === 'flex' && Object.keys(monsters).length) renderArena() }, 16);
+            // Use requestAnimationFrame with dirty flag for efficient rendering
+            function arenaLoop() {
+                if (arena.style.display === 'flex' && Object.keys(monsters).length) {
+                    // Always render if there are active animations, otherwise only on state change
+                    if (arenaDirty || blastFx.length > 0 || floatTexts.length > 0 || lightningStrike || lightningWarning) {
+                        renderArena();
+                        arenaDirty = false;
+                    }
+                }
+                requestAnimationFrame(arenaLoop);
+            }
+            requestAnimationFrame(arenaLoop);
             connect();
         })();
     </script>
